src/test/resources/Parser/SyntaxErrors/IncompatibleTypesReturn.front
class A:
    test () -> float64 {
        return 13;
    }